kubernetes/apps/booklore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  namespace: booklore
  labels:
    app: booklore
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: booklore/booklore:latest
          ports:
            - containerPort: 6060
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /books
              name: books
            - mountPath: /bookdrop
              name: bookdrop
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: booklore-data
        - name: books
          persistentVolumeClaim:
            claimName: pvc-booklore-library
        - name: bookdrop
          persistentVolumeClaim:
            claimName: pvc-booklore-bookdrop
