kubernetes/apps/booklore/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: booklore
  namespace: booklore
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`booklore.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: booklore
          port: 6060
  tls: {}
